pollux-common: re-enable "Eject SD card" option
Needed after http://review.cyanogenmod.org/62708/

Change-Id: Iaf963927a33e0f8ca2c4ef26aa77dd85e752bfe6

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -116,4 +116,6 @@
          config to 7. -->
     <integer name="config_deviceHardwareKeys">0</integer>
 
+    <!-- SD card is hot-pluggable on this device -->
+    <bool name="config_batterySdCardAccessibility">true</bool>
 </resources>
