overlay: update sim/sms flags
Change-Id: I1c036bd5aabe023023ede2f6acdc01622e79315c

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -14,10 +14,8 @@
          device is data-only. -->
     <bool name="config_voice_capable">false</bool>
 
-    <!-- Enable emergency call when sim is locked or puk locked. Some countries/carriers do not
-         allow emergency calls to be placed without the IMSI, which is locked in the SIM.
-         If so, this should be set to 'false' in an overlay. -->
-    <bool name="config_enable_emergency_call_while_sim_locked">false</bool>
+    <!-- This device does not allow sms service. -->
+    <bool name="config_sms_capable">false</bool>
 
     <!-- Indicate whether closing the lid causes the device to go to sleep and opening
          it causes the device to wake up.
